udpate setup, links

--- a/examples/audio_mnist.ipynb
+++ b/examples/audio_mnist.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "For a more detailed look, check out the following paper published in PMLR: [A deep convolutional neural network that is invariant to time rescaling](https://proceedings.mlr.press/v162/jacques22a.html)\n",
     "\n",
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](TODO PUT LINK HERE)"
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/compmem/sithshow/blob/main/examples/audio_mnist.ipynb)"
    ]
   },
   {
