--- a/examples/morse_code.ipynb
+++ b/examples/morse_code.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "For a more detailed look, check out the following paper published in PMLR: [A deep convolutional neural network that is invariant to time rescaling](https://proceedings.mlr.press/v162/jacques22a.html)\n",
     "\n",
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](TODO PUT LINK HERE)\n"
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/compmem/sithshow/blob/main/examples/morse_code.ipynb)\n"
    ]
   },
   {
@@ -26,8 +26,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sith import model_utils, SITHCon_Classifier\n",
-    "from sith.dataset_utils import dataloader, pad_sequence\n",
+    "from sithshow import model_utils, SITHCon_Classifier\n",
+    "from sithshow.dataset_utils import dataloader, pad_sequence\n",
     "\n",
     "import jax\n",
     "import jax.numpy as jnp\n",
