--- a/examples/odometer.ipynb
+++ b/examples/odometer.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](TODO PUT LINK HERE)"
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/compmem/sithshow/blob/main/examples/odometer.ipynb)"
    ]
   },
   {
@@ -31,8 +31,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sith.cnl import CNL\n",
-    "from sith.dataset_utils import dataloader, pad_sequence, random_split\n",
+    "from sithshow.cnl import CNL\n",
+    "from sithshow.dataset_utils import dataloader, pad_sequence, random_split\n",
     "\n",
     "import jax\n",
     "import jax.numpy as jnp\n",
