get data from OSF

--- a/examples/audio_mnist.ipynb
+++ b/examples/audio_mnist.ipynb
@@ -39,29 +39,37 @@
     "from tqdm import tqdm\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "import urllib.request as request\n",
     "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load in the data\n",
+    "# Load in the data stored on Open Science Framework. (1,000 samples of the unscaled data, 300 samples for each\n",
+    "# scaled dataset). You can find versions of the processed data with many more samples here: https://osf.io/5a9xs/\n",
+    "\n",
+    "if not os.path.exists('./data'):\n",
+    "    os.makedirs('./data')\n",
+    "    \n",
     "scales = ['0_40', '0_80', '1_00', '1_25', '2_50']\n",
+    "web_dirs = ['rcdsv', 'rmwq5', 'uefhk', 'gkhd5', 'cw2sr']\n",
     "scaled_datasets = {}\n",
     "\n",
-    "for scale in scales:\n",
-    "    dir = os.path.abspath('') + f'/audio_mnist_data/scale_{scale}.npz'\n",
-    "    dat = np.load(dir)\n",
-    "    \n",
+    "for web_dir, scale in zip(web_dirs, scales):\n",
+    "    if not os.path.exists(f'./data/scale_{scale}.npz'):\n",
+    "        request.urlretrieve(f'https://osf.io/{web_dir}/?action=download&version=1', f'./data/scale_{scale}.npz')\n",
+    "\n",
+    "    dat = np.load(f'./data/scale_{scale}.npz')\n",
     "    scaled_datasets[scale] = dat['X'], dat['Y']    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +78,7 @@
        "Text(0.5, 1.0, 'Spectrogram for digit 2 at timescale 1_25')"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
