--- a/examples/cme_demo.ipynb
+++ b/examples/cme_demo.ipynb
@@ -8,6 +8,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install -q SITHshow@git+https://github.com/compmem/SITHshow"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
