--- a/examples/morse_code.ipynb
+++ b/examples/morse_code.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: optional magic to install the sith library "
+    "!pip install -q SITHshow@git+https://github.com/compmem/SITHshow"
    ]
   },
   {
