--- a/examples/sith_intro.ipynb
+++ b/examples/sith_intro.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Intro to SITH (Scale-Invariant Temporal History)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/compmem/sithshow/blob/main/examples/cme_demo.ipynb)\n"
    ]
   },
