more realistic training length

--- a/examples/odometer.ipynb
+++ b/examples/odometer.ipynb
@@ -95,8 +95,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Many animals have an impressive ability to integrate information over time.\n",
-    "# For example, dead reckoning ants TODO. What kind of neural architecture supports this?\n",
+    "# Many animals have an impressive ability to integrate information over time. What kind of neural architecture supports this?\n",
     "# The answer is SITH, of course!\n",
     "\n",
     "# Here's a toy problem to see how this might work in practice:\n",
@@ -188,7 +187,7 @@
     "# Hyperparameters\n",
     "BATCH_SIZE=10\n",
     "LEARNING_RATE=3e-3\n",
-    "STEPS=100\n",
+    "STEPS=10_000\n",
     "SEED=5678\n",
     "\n",
     "key = jrandom.PRNGKey(SEED)\n",
