--- a/examples/audio_mnist.ipynb
+++ b/examples/audio_mnist.ipynb
@@ -123,7 +123,7 @@
     "# Hyperparameters:\n",
     "BATCH_SIZE=10\n",
     "LEARNING_RATE=3e-3\n",
-    "STEPS=50\n",
+    "STEPS=2_000\n",
     "SEED=5678\n",
     "\n",
     "key = jrandom.PRNGKey(SEED)\n",
