--- a/examples/morse_code.ipynb
+++ b/examples/morse_code.ipynb
@@ -103,7 +103,7 @@
     "# Hyperparameters:\n",
     "BATCH_SIZE=10\n",
     "LEARNING_RATE=3e-3\n",
-    "STEPS=2000\n",
+    "STEPS=2_000\n",
     "SEED=5678\n",
     "\n",
     "key = jrandom.PRNGKey(SEED)\n",
